Updated HTML,CSS & JS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
-* {
+/* * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
+} */
 
 :root {
     --blue: #0c3559;
@@ -15,6 +15,7 @@
   .custom-navbar {
     background-color: var(--darkblue);
     padding: 2% 0% 2% 0%;
+    z-index: 1;
   }
 
   .custom-navbar h1 {
@@ -82,3 +83,94 @@
     float: left;
     display: inline;
   }
+
+/*Map CSS*/
+
+/* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+       #map {
+        height: 100%;
+        width: 100%;
+      }
+      
+      /* Optional: Makes the sample page fill the window. */
+     html,
+     body {
+       height: 100%;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+      }
+      
+      #description {
+        font-family: Roboto;
+        font-size: 15px;
+        font-weight: 300;
+      }
+      
+      #infowindow-content .title {
+        font-weight: bold;
+      }
+      
+      #infowindow-content {
+        display: none;
+      }
+      
+      #map #infowindow-content {
+        display: inline;
+      }
+      
+      .userDestination-card {
+        margin: 10px 10px 0 0;
+        border-radius: 2px 0 0 2px;
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        outline: none;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+        background-color: #fff;
+        font-family: Roboto;
+      }
+      
+      #userDestination-container {
+        padding-bottom: 12px;
+        margin-right: 12px;
+      }
+      
+      .userDestination-controls {
+        display: inline-block;
+        padding: 5px 11px;
+      }
+      
+      .userDestination-controls label {
+        font-family: Roboto;
+        font-size: 13px;
+        font-weight: 300;
+      }
+      
+      #userDestination-input {
+        background-color: #fff;
+        font-family: Roboto;
+        font-size: 15px;
+        font-weight: 300;
+        margin-left: 12px;
+        padding: 0 11px 0 13px;
+        text-overflow: ellipsis;
+        width: 400px;
+      }
+      
+      #userDestination-input:focus {
+        border-color: #4d90fe;
+      }
+      
+      #title {
+        color: #fff;
+        background-color: #4d90fe;
+        font-size: 25px;
+        font-weight: 500;
+        padding: 6px 12px;
+      }
+      
+      #target {
+        width: 345px;
+      }
+      span[style*='top: -999px']{display: none;}
